# HighBarV3

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.github/runner-setup/: build-plugin.sh  hydrate-bar-assets.sh  install-spring-headless.sh  preflight.sh  register-runner.sh
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  terminology.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
audit/: README.md  command-audit.md  hypothesis-plan.md  v2-v3-ledger.md
clients/fsharp/: HighBar.Client.fsproj  HighBar.Proto.csproj
clients/python/: Makefile  README.md  conftest.py  pyproject.toml
clients/python/highbar_client/: __init__.py  admin.py  ai_plugins.py  ai_runner.py  channel.py  commands.py  live_topology.py  session.py  state_stream.py
clients/python/highbar_client/behavioral_coverage/: __init__.py  __main__.py  admin_actions.py  admin_live.py  admin_observations.py  admin_report.py  admin_suite.py  audit_inventory.py  audit_report.py  audit_runner.py  bnv_watch.py  bootstrap.py  capabilities.py  hypotheses.py  itertesting_campaign.py  itertesting_report.py  itertesting_retry_policy.py  itertesting_runner.py  itertesting_types.py  live_execution.py  live_failure_classification.py  metadata_records.py  predicates.py  registry.py  report.py  run_interpretation.py  types.py  upstream_fixture_intelligence.py  watch_registry.py
clients/python/highbar_client/highbar/: callbacks_pb2.py  callbacks_pb2_grpc.py  commands_pb2.py  commands_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  coordinator_pb2.py  coordinator_pb2_grpc.py  events_pb2.py  events_pb2_grpc.py  service_pb2.py  service_pb2_grpc.py  state_pb2.py  state_pb2_grpc.py
clients/python/highbar_client/samples/: ai_client.py  observer.py
clients/python/samples/: ai_client.py  observer.py
clients/python/tests/: test_admin.py  test_ai_plugins.py  test_ai_role.py  test_behavioral_registry.py  test_bootstrap.py  test_command_capabilities.py  test_command_diagnostics.py  test_live_topology.py  test_observer.py  test_protobuf_proxy_safety_conformance.py  test_proxy_builtin_disabled.py
clients/python/tests/behavioral_coverage/: test_admin_actions.py  test_admin_observations.py  test_admin_report.py  test_admin_suite.py  test_audit_report_live_refresh.py  test_bnv_watch.py  test_itertesting_report.py  test_itertesting_runner.py  test_live_audit_drift.py  test_live_audit_manifest.py  test_live_execution.py  test_live_failure_classification.py  test_live_hypothesis.py  test_live_row_repro.py  test_metadata_records.py  test_refresh_summary.py  test_upstream_fixture_intelligence.py  test_watch_registry.py
data/: AIInfo.lua  AIOptions.lua
data/config/: behaviour.json  grpc.json  spring-headless.pin
data/script/: unit.as
doc/: Profile.md
docs/: architecture.md  client-development.md  commit-hygiene.md  compilation.md  fork-state.md  local-env.md  proto-reference.md  transport.md
proto/: buf.gen.yaml  buf.yaml
proto/highbar/: callbacks.proto  commands.proto  common.proto  coordinator.proto  events.proto  service.proto  state.proto
reports/: 003-macro-build-live-run-2.md  003-macro-build-live-run.md  013-itertesting-live-runtime-investigation-2026-04-22.md  014-transport-provisioning-status-2026-04-22.md  016-project-state-audit-2026-04-23.md  017-nullai-enemy-spawner-status-2026-04-23.md  018-watch-attach-investigation-2026-04-23.md  2026-04-22-19h42min-014-upstream-fixture-intelligence.md  2026-04-23-08h53min-016-project-state-audit.md  2026-04-23-12h50min-017-live-rerun-status.md  2026-04-23-20h55min-018-live-run-viewer-follow-up-plan.md  2026-04-23-22h41min-018-watch-attach-investigation.md  2026-04-24-00h08min-018-barb-nullai-bnv-watch-sanity.md  2026-04-24-02h04min-non-python-client-protobuf-proxy-safety-design.md  2026-04-27-command-storage-and-pipeline-research.md
specs/001-grpc-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-live-headless-e2e/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-snapshot-arm-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-gateway-command-audit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-live-audit-evidence/: spec.md
specs/006-live-audit-evidence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-itertesting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-itertesting-retry-tuning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-live-itertest-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-command-contract-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-contract-hardening-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-build-root-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-itertesting-channel-stability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-fixture-bootstrap-simplification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-live-transport-provisioning/: data-model.md  follow-up-issues.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-live-bootstrap-hardening/: data-model.md  follow-up-issues.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-live-orchestration-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-live-run-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-protobuf-proxy-safety/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
util/: crash_test.py
(+443 files in other folders)
